compiler/test/programs/syntax_error/function_missing_body.fl
<?xml version="1.0" encoding="UTF-8"?>
<fluir >
    <function
        name="foo"
        id="1"
        x="10"
        y="10"
        z="3"
        w="100"
        h="100">
    </function>
</fluir>
